# dydx-client

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: ci.yml
dependencies/bip3x/: CMakeLists.txt  conanfile.py
dependencies/bip3x/cmake/: package.cmake
dependencies/bip3x/include/cbip3x/: cbip3x_config.h
dependencies/secp256k1/: CMakeLists.txt
dependencies/secp256k1/examples/: examples_util.h
dependencies/toolbox/include/toolbox/data/: utils.h
include/: account.h  bech32.h  dydx_config.h  grpc_client.h  market_info.h  order.h  rest_client.h  wallet.h  websocket_boost_client.h
src/: account.cpp  bech32.cpp  grpc_client.cpp  main.cpp  order.cpp  rest_client.cpp  websocket_boost_client.cpp
